# jaspCommonLib

./: .gitignore  CMakeLists.txt  README.md  appinfo.cpp  appinfo.h  columnencoder.cpp  columnencoder.h  columntype.h  dirs.cpp  enumutilities.h  log.cpp  utils.cpp  utils.h  version.h
QtUtils/: analysisbase.cpp  analysisbase.h  analysisformbase.h  appdirs.cpp  appdirs.h  appdirs.h.in  dynamicruntimeinfo.cpp  jsonutilities.h  knownissues.cpp  messageforwarder.cpp  preferencesmodelbase.h  qmlutils.cpp  qmlutils.h  qutils.cpp  qutils.h  sortmenumodel.cpp  sortmenumodel.h  variableinfo.cpp  variableinfo.h
